tests/NormalTests/paczka1/fuzzy1/20420245.err
Error in line 2: EYUgWX A745 94,9
Error in line 10: NTl S174 44,4
Error in line 20: EYUgWX S102 155,0
Error in line 26: S174 S174 29,7
Error in line 24: E390Ktzi A514 31,8
Error in line 31: UVFnsFda S102 59,1
Error in line 34: S174 S174 43,7
